@@ -16,6 +16,7 @@ NF
 ; 1, 552]], [5, 13, 17]], [-33.241540277189322804630581542105218897, 33.2415
 40277189322804630581542105218897], [2, y - 1], [1, 1; 0, 2], [1, 0, 0, 276; 
 0, 1, 1, -1]]
+.p: [5, 13, 17]
 .pol: y^2 - 1105
 .r1: 2
 .r2: 0
@@ -36,6 +37,7 @@ NF chvar
 23730950488016887242096980786], [1, 1; 1, -1], [2, 0; 0, -4], [4, 0; 0, 2], 
 [2, 0; 0, -1], [2, [0, -2; 1, 0]], [2]], [0.E-57 + 1.41421356237309504880168
 87242096980786*I], [1, y], [1, 0; 0, 1], [1, 0, 0, -2; 0, 1, 1, 0]]
+.p: [2]
 .pol: y^2 + 2
 .r1: 0
 .r2: 1
@@ -82,6 +84,7 @@ BNF
 40277189322804630581542105218897], [2, y - 1], [1, 1; 0, 2], [1, 0, 0, 276; 
 0, 1, 1, -1]]
 .no: 4
+.p: [5, 13, 17]
 .pol: y^2 - 1105
 .r1: 2
 .r2: 0
@@ -141,6 +144,7 @@ BNR
 40277189322804630581542105218897], [2, y - 1], [1, 1; 0, 2], [1, 0, 0, 276; 
 0, 1, 1, -1]]
 .no: 4
+.p: [5, 13, 17]
 .pol: y^2 - 1105
 .r1: 2
 .r2: 0
@@ -339,4 +343,4 @@ BID (nogen)
 MF
 .mod: t^2 + t + 1
 .mod: Mod(1, t^2 + t + 1)*y^2 + Mod(-2*t, t^2 + t + 1)
-Total time spent: 116
+Total time spent: 100
